--- a/style.css
+++ b/style.css
@@ -10,12 +10,15 @@
 .controls {
   position: absolute;
   z-index: 10;
-  top: 50px;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .controls,
 select,
 option {
-  font-size: 25px;
+  font-size: 22px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: hotpink;
 }
